ISAICP-4018: Fix list overflow

--- a/web/themes/joinup/prototype/sass/base/_unordered_list.sass
+++ b/web/themes/joinup/prototype/sass/base/_unordered_list.sass
@@ -12,6 +12,7 @@ article
       position: relative
       padding-left: 15px
       margin-bottom: 4px
+      overflow: hidden
       &:before
         position: absolute
         top: 10px
