--- a/web/themes/joinup/prototype/sass/components/_fieldset.sass
+++ b/web/themes/joinup/prototype/sass/components/_fieldset.sass
@@ -117,11 +117,6 @@
     +breakpoint(md)
       margin-left: 20px
 
-  img.align-left,
-  img.align-right
-    position: relative
-    +z-index(highlight)
-
 // Dependiencies
 // --------------------------------------------------
 
